--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
       imgWidth="600px"
       imgHeight="300px"
     />
+    <h1 id="id">hi</h1>
 
-    <script src="./module.js"></script>
+    <script src="./new.js"></script>
   </body>
 </html>
