--- a/index.html
+++ b/index.html
@@ -79,6 +79,6 @@
       <button id="cross">CORSS</button>
       <div id="shop"></div>
     </div>
-    <script src="./new.js"></script>
+    <script src="./js/Promises.js"></script>
   </body>
 </html>
